# PEA_zad1

./: CMakeLists.txt  JAK_KOMPILOWAC_JAK_URUCHOMIC.txt  README.md  output_terminala_dla_badan.txt  run_rand_trials_study.sh
config/: 00_test_read.txt  00_test_read_att48.txt  01_check_opt_att48.txt  01_check_opt_for_tsp.txt  02_single_rand_atsp.txt  02_single_rand_att48.txt  02_single_rand_tsp.txt  03_single_nn_atsp.txt  03_single_nn_att48.txt  03_single_nn_tsp.txt  04_single_rnn_atsp.txt  04_single_rnn_att48.txt  04_single_rnn_tsp.txt  05_heuristics_tsp.txt  05_single_rnn_br17.txt  06_heuristics_atsp.txt  06_heuristics_tsp.txt  07_bf_tsp_6_12.txt  07_bf_tsp_final.txt  07_heuristics_atsp.txt  08_bf_atsp_6_12.txt  08_bf_atsp_final(6-12).txt  08_bf_atsp_final.txt  08_bf_tsp.txt  09_bf_atsp.txt  09_bf_tsp_13_15.txt  10_bf_atsp_13_15.txt  10_bf_atsp_final(13-15).txt  XX_single_bf_atsp_macierz_eportal.txt  config.txt  heuristics_atsp.txt  heuristics_tsp.txt
include/: Config.h  FileReader.h  MemoryUsage.h  RandSolver.h  TSPInstance.h  TourUtils.h
results/: bf_atsp_final(13-15).csv  bf_atsp_final(6-12).csv  bf_atsp_final.csv  bf_tsp_final(13-15).csv  bf_tsp_final(6-12).csv  bf_tsp_final.csv  heuristics_atsp.csv  heuristics_tsp.csv  rand_trials_study.csv
src/: BruteForceSolver.cpp  BruteForceSolver.h  CSVWriter.cpp  CSVWriter.h  Config.cpp  Config.h  FileReader.cpp  Generator.cpp  InstanceListReader.cpp  InstanceListReader.h  MemoryUsage.cpp  NNSolver.cpp  NNSolver.h  OptTourReader.cpp  RNNSolver.cpp  RNNSolver.h  RandSolver.cpp  TourUtils.cpp  main.cpp
